--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -60,5 +60,5 @@ jobs:
          ls -lah bin
          mkdir RUN
          cd RUN
-         cp -r ../run/input ./
+         cp -r ../bin/input ./
          ../bin/init < ../bin/input.DAT
