--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -38,8 +38,8 @@ jobs:
          docker run ghcr.io/andriish/superchic:latest
          docker push ghcr.io/andriish/superchic
 
-  run-in-superchic-docker-image:
-    name: Run in superchic Docker image
+  run-in-superchic-docker-image-gmake:
+    name: Run in superchic Docker image  with gmake
     runs-on: ubuntu-latest
     needs: build-superchic-docker-image
     container:
@@ -61,6 +61,9 @@ jobs:
          ls -lah bin
          mkdir RUN
          cd RUN
-         mkdir -p inputs
+         mkdir -p inputs evrecs outputs
          cp -r ../bin/init ./
-         ../bin/init < ../bin/input.DAT
+         ../bin/init < ../test/input.DAT_1
+         ../bin/superchic < ../test/input.DAT_1
+         find ./
+         cat evrecs/evrectest.dat  
