--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -70,3 +70,27 @@ jobs:
          ../bin/superchic < ../test/input.DAT_2
          find ./
          cat evrecs/evrectest.dat
+  run-in-superchic-docker-image-cmake:
+    name: Run in superchic Docker image with cmake
+    runs-on: ubuntu-latest
+    needs: build-superchic-docker-image
+    container:
+            image: ghcr.io/andriish/superchic:latest
+            credentials:
+               username: ${{ github.actor }}
+               password: ${{ secrets.GITHUB_TOKEN }}
+    steps:
+    - name: Checkout
+      uses: actions/checkout@v3
+      with:
+          fetch-depth: 3 
+    - name: Run
+      run : |
+         cmake -S . -B BUILD -DCMAKE_INSTALL_PREFIX=$(pwd)/INSTALL -DCMAKE_Fortran_FLAGS=-O2 -DSUPERCHIC_ENABLE_TESTS=ON
+         cmake --build BUILD -j 2
+         cmake --install BUILD 
+         ls -lah 
+         ls -lah bin
+         ls -lah BUILD
+         find INSTALL
+         ctest --test-dir BUILD -j 2 --output-on-failure
