--- a/test/CMakeLists.txt
+++ b/test/CMakeLists.txt
@@ -1,4 +1,12 @@
 
+enable_language(CXX)
+find_package(HepMC3 3.1.0 REQUIRED)
+message(STATUS "SuperChic test: HEPMC3_VERSION=${HEPMC3_VERSION} HEPMC3_LIBRARIES=${HEPMC3_LIBRARIES} HEPMC3_INCLUDE_DIRS=${HEPMC3_INCLUDE_DIRS}")
+add_executable(validator ${CMAKE_CURRENT_SOURCE_DIR}/validator.cxx)
+target_link_libraries(validator PRIVATE ${HEPMC3_LIBRARIES})
+target_include_directories(validator PRIVATE ${HEPMC3_INCLUDE_DIRS})
+target_compile_features(validator PRIVATE cxx_std_11)
+
 set(STANDARDENVIRONMENT "SUPERCHIC_SOURCE_PATH=${PROJECT_SOURCE_DIR}")
 if (SUPERCHIC_DOWNLOAD_PDFS)
   file(MAKE_DIRECTORY ${CMAKE_CURRENT_BINARY_DIR}/PDFS)
@@ -16,22 +24,34 @@ if (SUPERCHIC_DOWNLOAD_PDFS)
          VERBATIM)
   LIST(APPEND STANDARDENVIRONMENT "LHAPDF_DATA_PATH=${CMAKE_CURRENT_BINARY_DIR}/PDFS")
 endif()
-macro(sctest NN)
+macro(inittest NN)
   file(MAKE_DIRECTORY ${CMAKE_CURRENT_BINARY_DIR}/RUN_${NN})
   file(MAKE_DIRECTORY ${CMAKE_CURRENT_BINARY_DIR}/RUN_${NN}/inputs)
   file(MAKE_DIRECTORY ${CMAKE_CURRENT_BINARY_DIR}/RUN_${NN}/evrecs)
   file(MAKE_DIRECTORY ${CMAKE_CURRENT_BINARY_DIR}/RUN_${NN}/outputs)
   add_test(NAME INIT_${NN} COMMAND sh -c "${PROJECT_BINARY_DIR}/init < ${CMAKE_CURRENT_SOURCE_DIR}/input.DAT_${NN}" WORKING_DIRECTORY ${CMAKE_CURRENT_BINARY_DIR}/RUN_${NN})
-  add_test(NAME SUPERCHIC_${NN} COMMAND sh -c "${PROJECT_BINARY_DIR}/superchic < ${CMAKE_CURRENT_SOURCE_DIR}/input.DAT_${NN}" WORKING_DIRECTORY ${CMAKE_CURRENT_BINARY_DIR}/RUN_${NN})
-  set_property(TEST SUPERCHIC_${NN} PROPERTY  DEPENDS INIT_${NN}) 
   if(SUPERCHIC_DOWNLOAD_PDFS)
     set_tests_properties( INIT_${NN} PROPERTIES ENVIRONMENT "${STANDARDENVIRONMENT}" DEPENDS UNZIPPDFS)
-    set_tests_properties( SUPERCHIC_${NN} PROPERTIES ENVIRONMENT "${STANDARDENVIRONMENT}" DEPENDS UNZIPPDFS)
   else()
     set_tests_properties( INIT_${NN} PROPERTIES ENVIRONMENT "${STANDARDENVIRONMENT}")
-    set_tests_properties( SUPERCHIC_${NN} PROPERTIES ENVIRONMENT "${STANDARDENVIRONMENT}")  
   endif()
 endmacro()
 
-sctest(1)
-#sctest(2)
+macro(sctest NN MM)
+  add_test(NAME SUPERCHIC_${MM} COMMAND sh -c "${PROJECT_BINARY_DIR}/superchic < ${CMAKE_CURRENT_SOURCE_DIR}/input.DAT_${MM}" WORKING_DIRECTORY ${CMAKE_CURRENT_BINARY_DIR}/RUN_${NN})
+  set_property(TEST SUPERCHIC_${MM} PROPERTY  DEPENDS INIT_${NN}) 
+  if(SUPERCHIC_DOWNLOAD_PDFS)
+    set_tests_properties( SUPERCHIC_${MM} PROPERTIES ENVIRONMENT "${STANDARDENVIRONMENT}" DEPENDS UNZIPPDFS)
+  else()
+    set_tests_properties( SUPERCHIC_${MM} PROPERTIES ENVIRONMENT "${STANDARDENVIRONMENT}")  
+  endif()
+  add_test(NAME VALIDATE_${MM} COMMAND validator ${CMAKE_CURRENT_BINARY_DIR}/RUN_${NN}/evrecs/evrectest${MM}.dat)
+  set_tests_properties( VALIDATE_${MM} PROPERTIES DEPENDS validator)
+  set_property(TEST VALIDATE_${MM} PROPERTY  DEPENDS SUPERCHIC_${MM}) 
+endmacro()
+
+
+
+inittest(1)
+sctest(1 1)
+
