--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -112,7 +112,7 @@ jobs:
          brew install wget coreutils gcc
          brew tap davidchall/hep
          brew install hepmc3 pythia8 lhapdf git
-         git clone https://github.com/scarrazza/apfel.git  && cd  apfel && ./configure --disable-pywrap  && make && make install && cd  ../ && rm -rf apfel
+         git clone https://github.com/scarrazza/apfel.git  && cd  apfel && FC=gfortran-13 ./configure  --disable-pywrap  && make && make install && cd  ../ && rm -rf apfel
          cmake -S . -B BUILD -DCMAKE_INSTALL_PREFIX=$(pwd)/INSTALL -DCMAKE_Fortran_FLAGS=-O2 -DSUPERCHIC_ENABLE_TESTS=ON -DSUPERCHIC_DOWNLOAD_PDFS=ON
          cmake --build BUILD -j 2
          cmake --install BUILD 
