--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -114,7 +114,7 @@ jobs:
          brew install hepmc3 pythia8 lhapdf git
          git clone https://github.com/scarrazza/apfel.git  && cd  apfel && FC=gfortran-13 ./configure  --disable-pywrap  && make && make install && cd  ../ && rm -rf apfel
          cmake -S . -B BUILD -DCMAKE_INSTALL_PREFIX=$(pwd)/INSTALL -DCMAKE_Fortran_FLAGS=-O2 -DSUPERCHIC_ENABLE_TESTS=ON -DSUPERCHIC_DOWNLOAD_PDFS=ON -DCMAKE_Fortran_COMPILER=gfortran-13 -DCMAKE_CXX_COMPILER=g++-13
-         cmake --build BUILD -j 2
+         cmake --build BUILD -j 2 --verbose
          cmake --install BUILD 
          ls -lah 
          ls -lah bin
