--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -151,7 +151,7 @@ else()
                         "$<$<Fortran_COMPILER_ID:PGI>:-mcmodel=medium>")
 endif()
 set_source_files_properties( ${CMAKE_CURRENT_SOURCE_DIR}/src/diss/Elastic.f ${CMAKE_CURRENT_SOURCE_DIR}/src/inition/gdrin.f 
-                             PROPERTIES Fortran_PREPROCESS ON)
+                             PROPERTIES Fortran_PREPROCESS ON Fortran_FORMAT FREE)
 
 
 if (${CMAKE_SYSTEM_NAME} MATCHES "Darwin")
