--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -111,8 +111,9 @@ jobs:
       run : |
          brew install wget coreutils gcc
          brew tap davidchall/hep
-         brew install hepmc3 pythia8 lhapdf git
+         brew install hepmc3 pythia8 lhapdf git gsed
          git clone https://github.com/scarrazza/apfel.git  && cd  apfel && FC=gfortran-13 ./configure  --disable-pywrap  && make && make install && cd  ../ && rm -rf apfel
+         gsed -i 's/gfortran/gfortran-13/g' makefile
          make -j 2
          cmake -S . -B BUILD -DCMAKE_INSTALL_PREFIX=$(pwd)/INSTALL -DCMAKE_Fortran_FLAGS=-O2 -DSUPERCHIC_ENABLE_TESTS=OFF -DCMAKE_Fortran_COMPILER=gfortran-13
          cmake --build BUILD -j 2 --verbose
