--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -115,7 +115,7 @@ jobs:
          git clone https://github.com/scarrazza/apfel.git  && cd  apfel && FC=gfortran-13 ./configure  --disable-pywrap  && make && make install && cd  ../ && rm -rf apfel
          mkdir -p obj lib
          gsed -i 's/gfortran/gfortran-13/g' makefile
-         gsed 's/^APFELLIB[^ ]*/APFELLIB=\`apfel-config --libdir\`/' makefile
+         gsed '4s/.*/APFELLIB=\`apfel-config --libdir\`/' makefile
          cat makefile
          make -j 2
          cmake -S . -B BUILD -DCMAKE_INSTALL_PREFIX=$(pwd)/INSTALL -DCMAKE_Fortran_FLAGS=-O2 -DSUPERCHIC_ENABLE_TESTS=OFF -DCMAKE_Fortran_COMPILER=gfortran-13
