Simplify the testing

--- a/test/CMakeLists.txt
+++ b/test/CMakeLists.txt
@@ -41,7 +41,7 @@ macro(inittest NN)
   file(MAKE_DIRECTORY ${CMAKE_CURRENT_BINARY_DIR}/RUN_${NN}/inputs)
   file(MAKE_DIRECTORY ${CMAKE_CURRENT_BINARY_DIR}/RUN_${NN}/evrecs)
   file(MAKE_DIRECTORY ${CMAKE_CURRENT_BINARY_DIR}/RUN_${NN}/outputs)
-  add_test(NAME INIT_${NN} COMMAND sh -c "${PROJECT_BINARY_DIR}/init < ${CMAKE_CURRENT_SOURCE_DIR}/input.DAT_${NN}" WORKING_DIRECTORY ${CMAKE_CURRENT_BINARY_DIR}/RUN_${NN})
+  add_test(NAME INIT_${NN} COMMAND sh -c "${PROJECT_BINARY_DIR}/init < ${CMAKE_CURRENT_BINARY_DIR}/input.DAT_${NN}" WORKING_DIRECTORY ${CMAKE_CURRENT_BINARY_DIR}/RUN_${NN})
   if(SUPERCHIC_DOWNLOAD_PDFS)
     set_tests_properties( INIT_${NN} PROPERTIES ENVIRONMENT "${STANDARDENVIRONMENT}" DEPENDS UNZIPPDFS)
   else()
@@ -50,7 +50,7 @@ macro(inittest NN)
 endmacro()
 
 macro(sctesthepmc NN MM)
-  add_test(NAME SUPERCHIC_${NN}_${MM} COMMAND sh -c "${PROJECT_BINARY_DIR}/superchic < ${CMAKE_CURRENT_SOURCE_DIR}/input.DAT_${MM}" WORKING_DIRECTORY ${CMAKE_CURRENT_BINARY_DIR}/RUN_${NN})
+  add_test(NAME SUPERCHIC_${NN}_${MM} COMMAND sh -c "${PROJECT_BINARY_DIR}/superchic < ${CMAKE_CURRENT_BINARY_DIR}/input.DAT_${MM}" WORKING_DIRECTORY ${CMAKE_CURRENT_BINARY_DIR}/RUN_${NN})
   if(SUPERCHIC_DOWNLOAD_PDFS)
     set_tests_properties( SUPERCHIC_${NN}_${MM} PROPERTIES ENVIRONMENT "${STANDARDENVIRONMENT}" DEPENDS "UNZIPPDFS;INIT_${NN}")
   else()
@@ -64,7 +64,7 @@ endmacro()
 
 
 macro(sctestlhe NN MM)
-  add_test(NAME SUPERCHIC_${NN}_${MM} COMMAND sh -c "${PROJECT_BINARY_DIR}/superchic < ${CMAKE_CURRENT_SOURCE_DIR}/input.DAT_${MM}" WORKING_DIRECTORY ${CMAKE_CURRENT_BINARY_DIR}/RUN_${NN})
+  add_test(NAME SUPERCHIC_${NN}_${MM} COMMAND sh -c "${PROJECT_BINARY_DIR}/superchic < ${CMAKE_CURRENT_BINARY_DIR}/input.DAT_${MM}" WORKING_DIRECTORY ${CMAKE_CURRENT_BINARY_DIR}/RUN_${NN})
   if(SUPERCHIC_DOWNLOAD_PDFS)
     set_tests_properties( SUPERCHIC_${NN}_${MM} PROPERTIES ENVIRONMENT "${STANDARDENVIRONMENT}" DEPENDS "UNZIPPDFS;INIT_${NN}")
   else()
@@ -77,13 +77,25 @@ macro(sctestlhe NN MM)
 endmacro()
 
 
+set(diffs  el sd dd)
+set(fmts  hepevt lhe hepmc)
+set(procs  1 2 3 4 5 6 7 8 9 10 11)
+set(procs 56)
 
-inittest(1)
-sctesthepmc(1 1)
-sctestlhe(1 2)
+foreach ( diff ${diffs} )
+foreach ( process ${procs} )
+configure_file(${CMAKE_CURRENT_SOURCE_DIR}/input.DAT_PROCESS ${CMAKE_CURRENT_BINARY_DIR}/input.DAT_PROCESS_${process}_${diff}) # for init
+foreach ( format ${fmts} )
+configure_file(${CMAKE_CURRENT_SOURCE_DIR}/input.DAT_PROCESS ${CMAKE_CURRENT_BINARY_DIR}/input.DAT_PROCESS_${process}_${diff}_${format})
+endforeach()
+endforeach()
+endforeach()
 
-#inittest(3)
-#sctesthepmc(3 3)
-
-#inittest(9)
-#sctesthepmc(9 9)
+foreach ( diff ${diffs} )
+foreach ( process ${procs} )
+inittest(PROCESS_${process}_${diff})
+sctestlhe(PROCESS_${process}_${diff} PROCESS_${process}_${diff}_lhe)
+sctesthepmc(PROCESS_${process}_${diff} PROCESS_${process}_${diff}_hepmc)
+# FIXME sctesthepmc(PROCESS_${process}_${diff} PROCESS_${process}_${diff}_hepevt)
+endforeach()
+endforeach()
