--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -54,7 +54,7 @@ jobs:
           fetch-depth: 3 
     - name: Run
       run : |
-         export SUPERCHIC_DATA_PATH=$(pwd)/data
+         #export SUPERCHIC_DATA_PATH=$(pwd)/share/SuperChic
          mkdir -p obj lib
          gmake
          gmake init
